--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <p><a href="/Carousels">Carousels Demo</a></p>
     <p><a href="/Find_pictures">Find two identical pictures</a><p>
     <p><a href="/alexis">Alexis</a></p>
+    <p><a href="/Yoga">YOGA</a></p>
 </body>
 </html>
