--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <p><a href="/Find_pictures">Find two identical pictures</a><p>
     <p><a href="/alexis">Alexis</a></p>
     <p><a href="/Yoga">YOGA</a></p>
+    <p><a href="/Shop">Shop</a></p>
 </body>
 </html>
