--- a/Yoga/index.html
+++ b/Yoga/index.html
@@ -58,7 +58,7 @@
   <div id="reservation"></div>
 
   <section class="reservation">
-    <img class="img_background_wrap block_for_img_like_wrap" src="img/backgrounds/matthew-kane.jpg">
+    <img class="img_background_wrap block_for_img_like_wrap" src="img/backgrounds/matthew-kane.jpg" alt="girl_on_background">
     <div class="block_reservation_wrap shadow_wrap_background_img reservation_background">
     <div class="shadow">
       <div class="add_reserve_wrap container">
