--- a/Yoga/index.html
+++ b/Yoga/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="lat">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>YOGA</title>
@@ -189,7 +189,7 @@
   <div id="gallery"></div>
 
   <section class="gallery">
-    <h2> </h2>
+    
     <div class="gallery_img_wrap">
       <img src="img/gallery/layer-14a.jpg" alt="">
       <div class="shadow_light shadow">
